--- a/source/_posts/算法题 - 找出一个字符串中出现最多的一个字符和次数.md
+++ b/source/_posts/算法题 - 找出一个字符串中出现最多的一个字符和次数.md
@@ -1,5 +1,5 @@
 ---
-title: 算法题：找出一个字符串中出现最多的一个字符和次数
+title: 算法题 - 找出一个字符串中出现最多的一个字符和次数
 date: 2018-11-22 12:32:54
 author: huangkuiwei
 img: http://img.25pp.com/uploadfile/soft/images/2015/0301/20150301021016689.jpg
