--- a/source/_posts/几个常用运算符.md
+++ b/source/_posts/几个常用运算符.md
@@ -9,7 +9,7 @@ tags:
 ### 1. instanceof
 >1. 作用：instanceof运算符用于测试构造函数的prototype属性是否出现在对象的原型链中的任何位置
 >2. 语法：object instanceof constructor
->3. 注意：不要去检测原始数据类型的值，都会返回 false
+>3. 注意：不能检测原始数据类型的值的属性，会报错。对已经删除了的属性进行检测会返回 false
 
 ```javascript
 class People {
@@ -44,4 +44,45 @@ let obj1 = Object.create(null);
 let obj2 = Object.create({});
 console.log(obj1 instanceof Object);   // false
 console.log(obj2 instanceof Object);   // true
+```
+### 2. in
+>1. 作用：如果指定的**属性**在指定的**对象或其原型链**中，则in 运算符返回true
+>2. 语法：prop in object
+>3. 注意：in 后面不能是原始类型的值（可以跟包装对象），否则会报错
+
+```javascript
+// 检测对象类型
+let obj = {name: 'huang', age: 24};
+console.log('name' in obj);           // true
+console.log('huang' in obj);          // false
+console.log('hasOwnProperty' in obj)  // true
+```
+检测原型上的属性返回 true。
+```javascript
+// 检测数组类型
+let arr = ['hello', 'world'];
+arr.name = 'arr';
+console.log(1 in arr);           // true
+console.log('hello' in arr);     // false(必须使用索引号,而不是数组元素的值)
+console.log('name' in arr);      // true
+console.log('length' in arr);    // true
+console.log('slice' in arr);     // true
+```
+```javascript
+// 时间对象
+let date = new Date();
+console.log('getFullYear' in date);  // true
+
+// 函数对象
+let fn = function(){};
+console.log('call' in fn);           // true
+
+// 包装对象
+let s = new String('hello world');
+console.log(1 in s);                 // true
+```
+```javascript
+// 原始类型
+let s = 'hello world';
+console.log('toString' in s)      // 报错
 ```
