--- a/source/_posts/几种常用的遍历方法.md
+++ b/source/_posts/几种常用的遍历方法.md
@@ -40,6 +40,48 @@ let obj = {name: 'huang', age: 22, address: '长沙市'};
 for (let key in obj) {
   console.log(key)      // name age address test
 }
+// 结合 hasOwnProperty()，可过滤掉原型上可迭代的属性，上同
+for (let key in obj) {
+  if(obj.hasOwnProperty(key)) {
+    console.log(key)    // name age address
+  }
+}
 ```
-遍历对象，同样是可以遍历原型上可枚举属性。
+>可以通过 break 和 continue 终止或者跳出当前循环。
 ### 2. for...of...循环
+for...of语句在可迭代对象（包括 Array，Map，Set，String，TypedArray，arguments 对象等等）上创建一个迭代循环，**调用自定义迭代钩子**，并为每个不同属性的值执行语句。
+>注意：for...of 语句遍历可迭代对象定义要迭代的数据。for...in 语句以原始插入顺序迭代对象的可枚举属性。
+>可以通过 break 和 continue 终止或者跳出当前循环。
+
+```javascript
+// 数组，其它类型就省略了。
+Array.prototype.test = 'test';
+let arr = [10, 20, 30];
+arr.name = 'arr';
+for (let item of arr) {
+  console.log(item)     // 10 20 30
+}
+// 或者 arr.entries() 返回一个迭代器
+for (let item of arr.entries()) {
+  console.log(item)     // [0, 10] [1, 20] [2, 30]
+}
+// 或者 arr.values() 返回一个迭代器
+for (let item of arr.values()) {
+  console.log(item)     // 10 20 30
+}
+// 或者 arr.keys() 返回一个迭代器
+for (let item of arr.keys()) {
+  console.log(item)     // 0 1 2
+}
+```
+一般对象是不能使用for...of...循环，要想循环就得加一个迭代方法。
+```javascript
+let obj = {name: 'huang', age: 24};
+ // 直接使用 for...of...循环，报错
+ // for(let item of obj){
+ //   console.log(item)     // 报错
+ // }
+ obj[Symbol.iterator] = function() {
+   
+ }
+```
