--- a/source/_posts/几种常用的遍历方法.md
+++ b/source/_posts/几种常用的遍历方法.md
@@ -74,14 +74,45 @@ for (let item of arr.keys()) {
   console.log(item)     // 0 1 2
 }
 ```
-一般对象是不能使用for...of...循环，要想循环就得加一个迭代方法。
+一般对象是不能直接使用for...of...循环，要想循环就得加一个迭代方法。
 ```javascript
 let obj = {name: 'huang', age: 24};
  // 直接使用 for...of...循环，报错
  // for(let item of obj){
  //   console.log(item)     // 报错
  // }
- obj[Symbol.iterator] = function() {
-   
- }
+obj[Symbol.iterator] = function () {
+let num = Object.values(obj);
+let index = 0;
+return {
+  next() {
+    if (index < num.length) {
+      return {
+        value: num[index++],
+        done: false
+      }
+    } else {
+      return {
+        value: undefined,
+        done: true
+      }
+    }
+  }
+}
+};
+// 每次遍历都会调用返回的遍历器对象的 next() 方法，item 的值就是返回的 value 值。
+// 一旦遇到 done 为 true的时候就停止遍历。
+for (let item of obj) {
+  console.log(item)     // huang 24
+}
 ```
+>Symbol.iterator会返回一个对象，这就是一个遍历器对象，而作为遍历器对象，其必须具备的特征就是必须具备next()方法。
+
+### 3. forEach()、map()、filter()、every()、some()
+这几个函数都是用来遍历数组的
+> 1. 这些函数都不会改变原来的数组。
+> 2. 循环体内部使用 break 和 continue 会报错。
+> 3. forEach 和 map，循环体内部使用 return 不会终止整个循环，只会终止 return 后面的语句，整体还是会循环完。
+> 4. filter(过滤)，返回指定数组中符合条件的所有元素。
+> 5. every，检测数组所有元素是否都符合指定条件。都符合就返回 true 否则返回 false。
+> 6. some，用于检测数组中的元素是否满足指定条件，只要有一个返回 true，则返回值就是 true。
