--- a/source/_posts/微信小程序重点总结.md
+++ b/source/_posts/微信小程序重点总结.md
@@ -35,6 +35,94 @@ tags:
 >3. `Page`是一个页面构造器，这个构造器就生成了一个页面。在生成页面的时候，小程序框架会把`data`数据和`index.wxml`一起渲染出最终的结构，于是就得到了你看到的小程序的样子。
 >4. 在渲染完界面之后，页面实例就会收到一个`onLoad`的回调，你可以在这个回调处理你的逻辑。
 
+#### 3. this.setData()方法使用
+`Page.prototype.setData(Object data, Function callback)`：setData 函数用于将数据从逻辑层发送到视图层（异步），同时改变对应的 this.data 的值（同步）。
+参数有两个：第一个为一个对象，为这次要改变的数据。第二个为引起的界面更新渲染完毕后的回调函数。
+>1. Object 以 key: value 的形式表示，将 this.data 中的 key 对应的值改变成 value。
+>2. 其中 key 可以以数据路径的形式给出，支持改变数组中的某一项或对象的某个属性，如 array[2].message，a.b.c.d，并且不需要在 this.data 中预先定义。
+>3. 直接修改 this.data 而不调用 this.setData 是无法改变页面的状态的，还会造成数据不一致。
+>4. 仅支持设置可 JSON 化的数据。单次设置的数据不能超过1024kB，请尽量避免一次设置过多的数据。
+>5. 请不要把 data 中任何一项的 value 设为 undefined ，否则这一项将不被设置并可能遗留一些潜在问题。
+
+```javascript
+Page({
+  data: {
+    value1: 'hello world',
+    value2: 12,
+    info: {
+      name: 'huang',
+      age: 24
+    },
+    list: ['huang', 'zhang', 'li', 'wu']
+  },
+  change() {
+    this.setData({
+      value1: 'value1 is changed',
+      value2: 21,
+      'info.age': 88,     // 可通过路径的形式修改某个值
+      'list[0]': 'liu'    // 同上
+    })
+  }
+})
+```
+>1. 补充1：一般情况下，需要用到的数据都要到`data`对象中进行初始化定义（要符合 json 的数据要求），不过如果在`this.setData`中修改了 data 中不存在的数据也是可以在页面上展示的，不过不推荐这样做。
+>2. 补充2：页面上使用了 data 中不存在的数据是不会报错的，只是不会展示。
+
+实例：
+现在有有一个需求，有九张图片，用户点哪张，哪张图片就要变色（其实就是替换成另外一张图片）
+```javascript
+Page({
+  data: {
+    imageList: [
+      {
+        id: 0,
+        image: '/assets/images/prize-bg01.png',
+        text: '大气'
+      },
+      {
+        id: 1,
+        image: '/assets/images/prize-bg01.png',
+        text: '硬扎'
+      },
+      {
+        id: 2,
+        image: '/assets/images/prize-bg01.png',
+        text: '灵泛'
+      }
+    ]
+  }
+})
+```
+```html
+<view class="prize">
+  <!-- 循环，不要忘记 wx:key -->
+  <view wx:for="{{prizeList}}" wx:key="item.id"> 
+    <!-- 通过 data-* 的方式给方法传值 -->
+    <image bindtap="getPrize" data-id="{{item.id}}" mode="widthFix" src="{{item.image}}"></image>
+    <text>{{item.text}}</text>
+  </view>
+</view>
+```
+样式就省略了。现在要写的是`getPrize`方法。
+```javascript
+getPrize(e) {
+  let id = e.target.dataset.id;     // 通过 data-* 传给方法的值 id，再通过 e.target.dataset 拿到组件上传来的所有值。
+  this.data.prizeList.map(item => {
+    let currentImage = `prizeList[${item.id}].image`;   // 当前 item 的数据路径
+    if (item.id === id) {
+      this.setData({
+        [currentImage]: '/assets/images/prize-bg02.png'
+      })
+    } else {
+      this.setData({
+        [currentImage]: '/assets/images/prize-bg01.png'
+      })
+    }
+  })
+}
+```
+
+
 
 
 
