--- a/source/_posts/微信小程序重点总结.md
+++ b/source/_posts/微信小程序重点总结.md
@@ -338,7 +338,7 @@ query.exec(res => {
 ```
 >注意：`exec`方法执行所有的请求。请求结果按请求次序构成数组，在callback的第一个参数中返回。如果没有执行这个方法，则 boundingClientRect() 等方法的回调函数函数不会执行。
 
-#### 10. wx.pageScrollTo(Object object)
+#### 11. wx.pageScrollTo(Object object)
 将页面滚动到目标位置。
 >1. `scrollTop`，number，必填，滚动到页面的目标位置，单位 px
 >2. `duration`，number，默认300mm，非必填，滚动动画的时长，单位 ms
@@ -352,11 +352,62 @@ wx.pageScrollTo({
   duration: 300
 })
 ```
+#### 12. 支持的css选择器
+选择器 | 是否支持 | 示例 | 描述
+-|-|-|-
+`.class` | 支持 | .box | 选择所有拥有 class="box" 的组件
+`#id` | 支持 | #box | 选择拥有 id="box" 的组件
+`element` | 支持 | view | 选择所有 view 组件
+`element, element` | 支持 | view, checkbox | 选择所有文档的 view 组件和所有的 checkbox 组件
+`::before` | 支持 | view::before | 在 view 组件前边插入内容
+`::after` | 支持 | view::after | 在 view 组件后边插入内容
+`element > element` | 只支持 view 组件 | view > text | 子元素选择器（view > text）只能用于 view 组件与其子节点之间（view > scroll-view > text 是无效的），用于其他组件可能导致非预期的情况。
+`element element` | 支持 | view scroll-view text | 后代选择器
+`element + element` | 支持 | view + text | 相邻兄弟选择器
+`element1~element2` | 支持 | view ~ text | 选择 view 组件后面所有的 text 组件
+`[attribute]` | 支持 | scroll-view[scroll-view-into] | 选择的属性是在该组件能够起作用的组件，用户自己定义的属性选择不到，也不能选择定义方法的属性，如果属性的值是 false，也无法选择到
+`:link` | - | - | 没有 a 标签
+`:visited` | - | - | 没有 a 标签
+`:active` | 支持 | view:active | 与`<view hover-class="xxx">`属性一致（只测试了view标签与text标签）
+`:hover` | 支持 | view:hover | 表现基本同:active，但是要取消该状态，要点击其他标签(让hover转移到其他标签上)
+`:focus` | 不支持 | - | 不支持此选择器
+`:first-letter` | 支持 | view:first-letter | 选择每个 view 组件的首字母
+`:first-line` | 支持 | view:first-line | 选择每个 view 组件的首行
+`:first-child` | 支持 | view > text:first-child | -
+`:last-child` | 支持 | text:last-child | -
+`:only-child` | 支持 | text:only-child | -
+`:first-of-type` | 支持 | text:first-of-type | -
+`:last-of-type` | 支持 | text:last-of-type | -
+`:only-of-type` | 支持 | text:only-of-type | -
+`:nth-child(n)` | 支持 | text:nth-child(2) | -
+`:nth-last-child(n)` | 支持 | text:nth-last-child | -
+`:nth-of-type(n)` | 支持 | text:nth-of-type | -
+`:nth-last-of-type(n)` | 支持 | text:nth-last-of | -
+`:not(selector)` | 支持 | text:not(:first-child) | -
+`:root` | 不支持 | - | -
+`:empty` | 支持 | text:empty | - 
+`:target` | 不支持 | - | 小程序没有锚点
+`:enabled` | 不支持 | - | -
+`:disabled` | 不支持 | - | 
+`:checked` | 不支持 | - | - 
+`::selection` | 不支持 | --------------------------- | -
 
+**一般情况下，推荐使用`class`选择器**
+**组件样式：** 组件对应 wxss 文件的样式，只对组件wxml内的节点生效。编写组件样式时，需要注意以下几点：
+>1. 组件和引用组件的页面不能使用id选择器（#a）、属性选择器（[a]）和标签名选择器，请改用class选择器。
+>2. 组件和引用组件的页面中使用后代选择器（.a .b）在一些极端情况下会有非预期的表现，如遇，请避免使用。
+>3. 子元素选择器（.a>.b）只能用于 view 组件与其子节点之间，用于其他组件可能导致非预期的情况。
+>4. 继承样式，如 font 、 color ，会从组件外继承到组件内。
+>5. 除继承样式外， app.wxss 中的样式、组件所在页面的的样式对自定义组件无效（除非更改组件样式隔离选项）。
 
+**补充：**
+为什么组件和引用组件的页面不能使用id选择器（#a）、属性选择器（[a]）和标签名选择器？
+>因为id选择器（#a）、属性选择器（[a]）和标签名选择器会影响组件，比如：页面和子组件都有 id="box" 的元素，在页面使用 #box 来写样式，这样会影响到其子组件的样式，属性选择器和标签名选择器同样存在这个问题。（不得不说对比于 Vue，小程序真的是太垃圾了）
 
+#### 12. require
+require必须写相对路径，写绝对路径会找不到。（一脸懵逼）
 
-
+#### 13. swiper组件的一个妙用
 
 
 
