--- a/source/_posts/微信小程序重点总结.md
+++ b/source/_posts/微信小程序重点总结.md
@@ -408,6 +408,56 @@ wx.pageScrollTo({
 require必须写相对路径，写绝对路径会找不到。（一脸懵逼）
 
 #### 13. swiper组件的一个妙用
+swipe 组件：我平时一般都用来做轮播图，今天业务上有一个需求，要做文字上下滚动的效果，要知道在微信小程序里不能直接操作 DOM，做动画比较麻烦（可能是我比较菜吧），于是就找啊找，就找到了 swiper 组件，发现它可以实现这个效果。
+先通过接口拿到要在页面上展示的效果，这里就直接在 data 中定义了：
+```javascript
+Page({
+  data: {
+    prizeList: [
+      {phn: '186****6763', prizeName: '玛莎拉蒂5元代金券'},
+      {phn: '156****6753', prizeName: '现金红包0.01元'},
+      {phn: '159****0951', prizeName: '团体观影券'}
+    ]
+  }
+})
+```
+```html
+<swiper autoplay interval="{{3000}}" circular vertical wx:if="{{recodeList.length > 0}}" class="drwan-pirze">
+  <swiper-item wx:for="{{recodeList}}" wx:key="{{index}}">
+    恭喜{{item.phn}}获得{{item.prizeName}}
+  </swiper-item>
+</swiper>
+```
+```css
+.drwan-pirze {
+  position: absolute;
+  top: 3.5%;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 65%;
+  text-align: center;
+  font-size: 24rpx;
+  height: 30rpx;
+  line-height: 30rpx;
+}
+
+.drwan-pirze swiper-item {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: #fff;
+}
+```
+注意点：
+>1. swiper 组件的默认高度是150px，高度要自己重新设置。
+>2. 上下滚动，要设置属性 vertical，其它看需求来。
+
+#### 14. text组件绑定事件
+text 组件里面只能套 text 组件，有一个有趣的现象，不知道是 bug 还是特意这样子设计的，在 text 组件里面套的 text 组件绑定的事件是无效的！要是想继续绑定事件，就不能使用 text 套 text 的写法。
+
+#### 15. 事件对象e
+在小程序中，即使绑定事件的组件和触发事件的组件时同一个时：`e.target !== e.currentTarget`，这个逻辑和 H5 是不一样的。
 
 
 
