--- a/source/_posts/微信小程序中常用的接口和功能.md
+++ b/source/_posts/微信小程序中常用的接口和功能.md
@@ -1,5 +1,5 @@
 ---
-title: 微信小程序中采用的接口和功能
+title: 微信小程序中常用的接口和功能
 date: 2019-01-12 20:12:43
 author: huangkuiwei
 img: http://pic.ossfiles.cn:9186/group1/M00/15/1D/rBgIBlx579L_a7lKAAAf12qXaR0168.jpg
@@ -124,8 +124,32 @@ App({
 #### 5. 微信本地存储能力：wx.getStorage(Object object)，wx.getStorageSync(string key)
 从本地缓存中异步获取指定 key 的内容。不介绍了，可看官方文档。
 
-
-
+#### 6. 全屏预览图片，对图片进行操作：wx.previewImage(Object object)
+```html
+<block wx:for="{{imageList}}">
+  <image data-src="{{item.src}}" bindtap="previewImage" src="{{item.src}}" mode="widthFix"></image>
+</block>
+```
+```javascript
+Page({
+  data: {
+    imageList: [
+      {id: 0, src: '/images/01.png'}, 
+      {id: 1, src: '/images/02.png'},
+      {id: 2, src: '/images/03.png'}
+    ]
+  },
+  previewImage(e) {
+    // 获取当前用户点击的图片
+    let src = e.target.dataset.src;
+    // api
+    wx.previewImage({
+      urls: this.data.imageList,    // 图片数组
+      current: src                  // 当前的图片src
+    })
+  }
+})
+```
 
 
 
