--- a/source/_posts/微信小程序重点总结.md
+++ b/source/_posts/微信小程序重点总结.md
@@ -216,7 +216,7 @@ Page({
 ```
 组件属性：
 ```html
-<!-- 绑定的属性要用{{}}语法，{{}}内部可以是`JavaScript表达式` -->
+<!-- 绑定的属性要用{{}}语法，{{}}内部可以是`JavaScript表达式（一部分）` -->
 <view id="{{message}}"></view>              <!-- id="Hello World" -->
 <view id="aaa{{message}}"></view>           <!-- id="aaaHello world" -->
 <view id="{{'aaa' +  message}}"></view>     <!-- id="aaaHello World" -->
@@ -404,6 +404,19 @@ wx.pageScrollTo({
 为什么组件和引用组件的页面不能使用id选择器（#a）、属性选择器（[a]）和标签名选择器？
 >因为id选择器（#a）、属性选择器（[a]）和标签名选择器会影响组件，比如：页面和子组件都有 id="box" 的元素，在页面使用 #box 来写样式，这样会影响到其子组件的样式，属性选择器和标签名选择器同样存在这个问题。（不得不说对比于 Vue，小程序真的是太垃圾了）
 
+关于子选择器的一个注意点：
+>子选择器用于 view 组件和它的直接子代组件之间，例如：`view > text`，`view > .box`，`.a > .b(.a 是 view 组件)`，下面几种情况是无效的：
+
+```css
+/* 没有用于 view 和 它的直接子代 */
+view > scroll-view > text {}
+/* 子代使用了 id 选择器，编译错误 */
+view > #box {}
+/* 不知道为啥，这种情况是有效的，#box 是 view 组件 */
+#box > .pox {}
+```
+
+总结：id 选择器能不用就不用，尽量使用 class 选择器，后代选择器和子选择器用的时候要小心，其它选择器参考上文酌情使用（会有坑）。
 #### 12. require
 require必须写相对路径，写绝对路径会找不到。（一脸懵逼）
 
@@ -458,6 +471,59 @@ text 组件里面只能套 text 组件，有一个有趣的现象，不知道是
 
 #### 15. 事件对象e
 在小程序中，即使绑定事件的组件和触发事件的组件时同一个时：`e.target !== e.currentTarget`，这个逻辑和 H5 是不一样的。
+
+#### 16. 尺寸单位vh
+尺寸单位vh并不是小程序里面的专有单位，只是我在开发小程序中发现这个单位也时常用得上，所以记录一下：
+>vh 是 css3 新单位，view height的简写，是指可视窗口的高度。假如高度是 1200px 的话。那 10vh 就是 120px，也就是说把设备的高度分成了 100 等份，每一份就是 1vh。
+
+#### 17. 使用定位得元素配合使用 z-index
+微信小程序中元素使用了固定定位和绝对定位，可以配合使用 `z-index` 属性。如果没有使用 z-index 属性把元素的层级提高的话，固定定位和绝对定位的元素绑定的点击事件可能就不生效（准确来讲就像是用了定位的元素的层级还是0，并没有真正"浮起来"）。
+
+#### 18. textarea 组件注意事项
+textarea 组件如果用在一个使用了 `position: fixed` 的区域，一定要加上 `fixed` 属性，我是被这个坑的一愣一愣的...
+
+#### 19. 获取 input， textarea 等表单组件输入框的值
+有两种办法，一种是使用 `form` 组件，另外一种是使用 `bindinput` 事件将元素的 value 值同步绑定到 data 中。
+
+#### 20. 充分利用 globalData 和微信本地存储能力
+如果数据需要在多个页面中应用，可以将数据放在 `globalData` 中或者使用微信本地存储能力。
+
+#### 21. app.wxss
+`app.wxss`是一个全局的样式，一般情况下也是要影响所有的 wxml 文件，在默认情况下，app.wxss 使用标签名选择器（或一些其他特殊选择器）会对所有页面和自定义组件产生影响，使用 class 选择器会对所有页面产生影响，对自定义组件不产生影响。可以修改组件样式隔离选项`styleIsolation`来自定义影响范围。
+
+#### 22. wxs
+wxs 有两种表现形式，一种直接是写 `.wxs` 文件，另外一种是 `<wxs>` 标签，可以实现类似 Vue 中过滤器的功能。
+```javascript
+Page({
+  data: {
+    name: 'huang kui wei'
+  }
+})
+```
+```html
+<wxs module="myData">
+  function myName(name) {
+    var nameArray = name.split(' ');
+    for(var i = 0; i < nameArray.length; i++) {
+      nameArray[i] = nameArray[i][0].toUpperCase() + nameArray[i].slice(1)
+    }
+    return nameArray.join(' ')
+  }
+  module.exports.myName = myName
+</wxs>
+
+<view>{{myDate.myName(name)}}</view>
+```
+这里页面上呈现的就是 Huang Kui Wei。
+>注意：在使用 wxs 语法的时候，要注意它的限制，不支持 ES6 语法。
+
+
+
+
+
+
+
+
 
 
 
