--- a/source/_posts/微信小程序中常用的接口和功能.md
+++ b/source/_posts/微信小程序中常用的接口和功能.md
@@ -151,7 +151,155 @@ Page({
 })
 ```
 
+#### 7. 小程序分享转发功能：onShareAppMessage(Object object)
+监听用户点击页面内转发按钮（button 组件 `open-type="share"`）或右上角菜单“转发”按钮的行为，并自定义转发内容。
+>注意：只有定义了此事件处理函数，右上角菜单才会显示“转发”按钮
 
+```javascript
+Page({
+  // 监听用户分享行为
+  onShareAppMessage(options) {
+    // options.webViewUrl: 页面中包含web-view组件时，返回当前web-view的url
+    if(options.form === 'button') {
+      // 此时 options.target 就是触发转发的 button 元素
+      console.log('转发事件来源于button')
+    } else if(options.from === 'menu') {
+      // 此时 options.target 为 undefined
+      console.log('转发事件来源于右上角菜单')
+    }
+    // 返回一个对象，存放的就是要转发的信息
+    return {  
+      // 当前小程序名称
+      title: '分享的标题',
+      // 当前页面 path ，必须是以 / 开头的完整路径
+      path: '/pages/index/index',
+      // 自定义图片路径，可以是本地文件路径、代码包文件路径或者网络图片路径。支持PNG及JPG。显示图片长宽比是 5:4。默认显示使用默认截图
+      // imageUrl: ...
+      // 分享的回调因为被滥用，已经被取消了。
+      // success: res => {
+      //   console.log('分享成功啦')
+      // },
+      // fail: error => {
+      //   console.log('分享失败')
+      // }
+    }
+  }
+})
+```
+>这只是最简单的小程序转发示例，可以配合微信其它转发api进行动态操作。
+
+#### 8. 几个路由 api
+这个是是必选要掌握的基础 api。要记住他们的区别，灵活运用。
+**① wx.navigateTo(Object object)**
+>保留当前页面，跳转到应用内的某个页面。但是`不能跳到 tabbar 页面`。使用 wx.navigateBack 可以返回到原页面。小程序中页面栈`最多十层`。可以携带参数。
+
+```javascript
+Page({
+  jump() {
+    wx.navigateTO({
+      // 需要跳转的应用内非 tabBar 的页面的路径, 路径后可以带参数。
+      url: '/pages/path1/path1?id=1&name=huang',
+      success: () => {},
+      fail: () => {},
+      complete: () => {}
+    })
+  }
+})
+```
+在这个方法执行后，页面就会跳转到 `/pages/path1/path1` 路径，后面的参数也会携带过去。
+```javascript
+// /pages/path1/path2 页面
+Page({
+  onLoad(options) {
+    console.log(options.id);      // 1
+    console.log(options.name)     // huang
+  }
+})
+```
+**② wx.switchTab(Object, object)**
+>跳转到 `tabBar` 页面，并关闭其他所有非 tabBar 页面，路径后不能带参数。
+
+```javascript
+Page({
+  jump() {
+    wx.switchTab({
+      // 需要跳转的 tabBar 页面的路径（需在 app.json 的 tabBar 字段定义的页面），路径后不能带参数。
+      url: '/pages/path1/path1',
+      // 回调函数省略...
+    })
+  }
+})
+```
+总结：这个 api 只能打开小程序 tab 页面，url 也不能带参数。
+
+**③ wx.reLaunch(Object object)**
+>关闭`所有`页面，打开到应用内的某个页面，可以带参数（包括打开 tab 页面）
+
+```javascript
+Page({
+  jump() {
+    wx.reLaunch({
+      // 需要跳转的应用内页面路径，路径后可以带参数。
+      url: '/pages/path1/path1?id=1&name=huang',
+      // 回调函数省略...
+    })
+  }
+})
+```
+**④ wx.redirectTo(Object object)**
+>关闭`当前`页面，跳转到应用内的某个页面。但是不允许跳转到 tabbar 页面。
+
+ ```javascript
+Page({
+  jump() {
+    wx.redirectTo({
+      // 需要跳转的应用内页面路径，路径后可以带参数。
+      url: '/pages/path1/path1?id=1&name=huang',
+      // 回调函数省略...
+    })
+  }
+})
+ ```
+ **⑤ wx.navigateBack(Object object)**
+>关闭`当前`页面，返回上一页面或多级页面。可通过 getCurrentPages 获取当前的页面栈，决定需要返回几层。
+
+```javascript
+Page({
+  goBack() {
+    wx.navigate({
+      // 返回的页面数，如果 delta 大于现有页面数，则返回到首页。
+      delta: 1,
+      // 回调函数省略...
+    })
+  }
+})
+```
+ **⑤ wx.navigateToMiniProgram(Object object)**
+>打开另一个小程序
+
+```javascript
+Page({
+  jump() {
+    wx.navigateToMiniProgram({
+      //要打开的小程序 appId
+      appId: '...',
+      // 打开的页面路径，如果为空则打开首页。path 中 ? 后面的部分会成为 query。在小程序的 App.onLaunch、App.onShow 和 Page.onLoad 的回调函数
+      path: '...',
+      // 需要传递给目标小程序的数据，目标小程序可在 App.onLaunch，App.onShow 中获取到这份数据。
+      extraData: {},
+      // 要打开的小程序版本。仅在当前小程序为开发版或体验版时此参数有效。如果当前小程序是正式版，则打开的小程序必定是正式版。
+      envVersion: 'release',
+      // 三个回调函数省略...
+    })
+  }
+})
+```
+
+使用限制：
+>1. `需要用户触发跳转`：从 2.3.0 版本开始，若用户未点击小程序页面任意位置，则开发者将无法调用此接口自动跳转至其他小程序。
+>2. `需要用户确认跳转`：从 2.3.0 版本开始，在跳转至其他小程序前，将统一增加弹窗，询问是否跳转，用户确认后才可以跳转其他小程序。如果用户点击取消，则回调 fail cancel。
+>3. 每个小程序可跳转的其他小程序数量限制为`不超过 10 个`：该名单可在发布新版时更新，`不支持动态修改`。
+>4. 需要跳转的小程序 `appId` 在全局配置的 `app.json` 中进行定义：这段是：`navigateToMiniProgramAppIdList`
 
 
 
