--- a/source/_posts/微信小程序重点总结.md
+++ b/source/_posts/微信小程序重点总结.md
@@ -517,10 +517,36 @@ Page({
 这里页面上呈现的就是 Huang Kui Wei。
 >注意：在使用 wxs 语法的时候，要注意它的限制，不支持 ES6 语法。
 
+#### 23. 模板 template 复用
+在复用模板的时候，如果模板在文件外部，要先使用 `import` 组件将模板加载进来
+```html
+<!-- my-template.wxml -->
+<template name="my-template">
+  <view class="box">{{userInfo.username}}</view>
+</template>
+```
+```html
+<!-- index.wxml -->
+<!-- 先将模板引进 -->
+<import src="../../template/my-template.wxml" />
+<template is="my-template" data="{{userInfo}}" />
+```
+```css
+/* index.wxss */
+.box {
+  color: #ccc;
+  font-size: 100rpx;
+}
+```
+>1. import 可以在该文件中使用目标文件定义的template。
+>2. import 有作用域的概念，即只会 import 目标文件中定义的 template，而不会 import 目标文件 import 的 template。如果目标文件里面要引用的 template 有使用另外的模板，是可以正常显示的。
+>3. 可以在当前文件对引进的模板 template 的样式进行定义和修改，这样写的样式就不能影响其它文件引入的同样的模板。当然也可以在全局样式 app.wxss 中进行定义，这样会影响所有引入的模板样式。如果两个地方样式都写，那么引进模板的地方写的样式将会覆盖全局样式 app.wxss。同样模板内定义的事件也是在相应的页面内进行维护，互不影响。
+>4. 模板只能使用用过 data 属性传递过去的数据。
+>5. 推荐将 import 组件放置在文件的顶部统一将模板引进。
 
-
-
-
+#### 24. include 组件和 import 组件的区别
+include 可以将目标文件除了 `<template/> <wxs/>` 外的整个代码引入，相当于是拷贝到 include 位置。
+import 可以在该文件中使用目标文件定义的 `template`。
 
 
 
