--- a/source/_posts/微信小程序重点总结.md
+++ b/source/_posts/微信小程序重点总结.md
@@ -417,10 +417,10 @@ view > #box {}
 ```
 
 总结：id 选择器能不用就不用，尽量使用 class 选择器，后代选择器和子选择器用的时候要小心，其它选择器参考上文酌情使用（会有坑）。
-#### 12. require
+#### 13. require
 require必须写相对路径，写绝对路径会找不到。（一脸懵逼）
 
-#### 13. swiper组件的一个妙用
+#### 14. swiper组件的一个妙用
 swipe 组件：我平时一般都用来做轮播图，今天业务上有一个需求，要做文字上下滚动的效果，要知道在微信小程序里不能直接操作 DOM，做动画比较麻烦（可能是我比较菜吧），于是就找啊找，就找到了 swiper 组件，发现它可以实现这个效果。
 先通过接口拿到要在页面上展示的效果，这里就直接在 data 中定义了：
 ```javascript
@@ -466,32 +466,33 @@ Page({
 >1. swiper 组件的默认高度是150px，高度要自己重新设置。
 >2. 上下滚动，要设置属性 vertical，其它看需求来。
 
-#### 14. text组件绑定事件
+#### 15. text组件绑定事件
 text 组件里面只能套 text 组件，有一个有趣的现象，不知道是 bug 还是特意这样子设计的，在 text 组件里面套的 text 组件绑定的事件是无效的！要是想继续绑定事件，就不能使用 text 套 text 的写法。
 
-#### 15. 事件对象e
+#### 16. 事件对象e
 在小程序中，即使绑定事件的组件和触发事件的组件时同一个时：`e.target !== e.currentTarget`，这个逻辑和 H5 是不一样的。
 
-#### 16. 尺寸单位vh
+#### 17. 尺寸单位vh
 尺寸单位vh并不是小程序里面的专有单位，只是我在开发小程序中发现这个单位也时常用得上，所以记录一下：
 >vh 是 css3 新单位，view height的简写，是指可视窗口的高度。假如高度是 1200px 的话。那 10vh 就是 120px，也就是说把设备的高度分成了 100 等份，每一份就是 1vh。
 
-#### 17. 使用定位得元素配合使用 z-index
+#### 18. 使用定位得元素配合使用 z-index
 微信小程序中元素使用了固定定位和绝对定位，可以配合使用 `z-index` 属性。如果没有使用 z-index 属性把元素的层级提高的话，固定定位和绝对定位的元素绑定的点击事件可能就不生效（准确来讲就像是用了定位的元素的层级还是0，并没有真正"浮起来"）。
 
-#### 18. textarea 组件注意事项
+#### 19. textarea 组件注意事项
 textarea 组件如果用在一个使用了 `position: fixed` 的区域，一定要加上 `fixed` 属性，我是被这个坑的一愣一愣的...
 
-#### 19. 获取 input， textarea 等表单组件输入框的值
+#### 20. 获取 input， textarea 等表单组件输入框的值
 有两种办法，一种是使用 `form` 组件，另外一种是使用 `bindinput` 事件将元素的 value 值同步绑定到 data 中。
+如果用 form 来获取参数，元素标签需要加属性 name 才可以获取到，没有 name 属性，那么在提交的时候，e.detail.value 就不会包含该值。
 
-#### 20. 充分利用 globalData 和微信本地存储能力
+#### 21. 充分利用 globalData 和微信本地存储能力
 如果数据需要在多个页面中应用，可以将数据放在 `globalData` 中或者使用微信本地存储能力。
 
-#### 21. app.wxss
+#### 22. app.wxss
 `app.wxss`是一个全局的样式，一般情况下也是要影响所有的 wxml 文件，在默认情况下，app.wxss 使用标签名选择器（或一些其他特殊选择器）会对所有页面和自定义组件产生影响，使用 class 选择器会对所有页面产生影响，对自定义组件不产生影响。可以修改组件样式隔离选项`styleIsolation`来自定义影响范围。
 
-#### 22. wxs
+#### 23. wxs
 wxs 有两种表现形式，一种直接是写 `.wxs` 文件，另外一种是 `<wxs>` 标签，可以实现类似 Vue 中过滤器的功能。
 在小程序中，双括号里面默认时不能使用方法的，要想使用方法，那就需要定义 `<wxs>` 模块。
 ```javascript
@@ -539,7 +540,7 @@ page({
 ```
 >注意：在使用 wxs 语法的时候，要注意它的限制，不支持 ES6 语法。
 
-#### 23. 模板 template 复用
+#### 24. 模板 template 复用
 在复用模板的时候，如果模板在文件外部，要先使用 `import` 组件将模板加载进来
 ```html
 <!-- my-template.wxml -->
@@ -566,9 +567,62 @@ page({
 >4. 模板只能使用用过 data 属性传递过去的数据。
 >5. 推荐将 import 组件放置在文件的顶部统一将模板引进。
 
-#### 24. include 组件和 import 组件的区别
+#### 25. include 组件和 import 组件的区别
 include 可以将目标文件除了 `<template/> <wxs/>` 外的整个代码引入，相当于是拷贝到 include 位置。
 import 可以在该文件中使用目标文件定义的 `template`。
+
+#### 26. 去掉或自定义 button 组件边框
+```css
+button:after {
+  /*border: 0;*/
+  border: 3px solid #ccc;
+}
+```
+button 组件的边框默认卸载选择器 button:after 上面，所以去掉也要写这个属性。
+
+#### 27. 写在 Page({}) 上面的代码
+先看示例：首页时 index，tab 有两个，index 和 logs，默认打开首页 index。
+```javascript
+// app.js
+console.log('app');
+
+App({
+  onLaunch() {
+    console.log('app-launch')
+  },
+  onShow() {
+    console.log('app-show')
+  }
+})
+```
+```javascript
+// index
+console.log('index');
+
+Page({
+  onLoad() {
+    console.log('index-load')
+  }
+})
+```
+
+```javascript
+// logs
+console.log('logs');
+
+Page({
+  onLoad() {
+    console.log('logs-load')
+  }
+})
+```
+打印出来的结果：
+`app => app-launch => app-show => index > logs => index-load`
+从上面的输出结果可以得出结论
+>1. 写在 Page({}) 上面的代码一定会执行，即使当前页面并没有加载。
+>2. 加载顺序：先加载 app.js 中 App({}) 之前的代码，再加载 App 中的生命周期函数(`onLaunch(), onShow()`)，然后再加载其它页面 Page({}) 之前的代码，再加载当前要打开的页面的生命周期函数(`onLoad(). onShow(), onReady()`)。
+
+
 
 
 
