--- a/source/_posts/微信小程序 - 常用的接口和功能.md
+++ b/source/_posts/微信小程序 - 常用的接口和功能.md
@@ -1,5 +1,5 @@
 ---
-title: 微信小程序中常用的接口和功能
+title: 微信小程序 - 常用的接口和功能
 date: 2019-01-12 20:12:43
 author: huangkuiwei
 img: http://pic.ossfiles.cn:9186/group1/M00/15/1D/rBgIBlx579L_a7lKAAAf12qXaR0168.jpg
@@ -301,6 +301,40 @@ Page({
 >3. 每个小程序可跳转的其他小程序数量限制为`不超过 10 个`：该名单可在发布新版时更新，`不支持动态修改`。
 >4. 需要跳转的小程序 `appId` 在全局配置的 `app.json` 中进行定义：这段是：`navigateToMiniProgramAppIdList`
 
+#### 9. 获取用户地理位置：wx.getLocation(Object object)
+>1. 使用此接口需要现在 app.json 文件中定义声明，否则无法使用。
+>2. 获取当前的地理位置、速度。当用户离开小程序后，此接口无法调用。
+
+```json
+{
+  "permission": {
+    "scope.userLocation": {
+      "desc": "放心，我不会拿你的地理位置信息来做坏事的"
+    }    
+  }
+}
+```
+```javascript
+Page({
+  data: {
+    latitude: 0,
+    longitude: 0
+  },
+  onLoad() {
+    wx.getLocation({
+      success: () => {
+        this.setData({
+          latitude: res.latitude,
+          longitude: res.longitude
+        })
+      },
+      fail: () => {
+        // 授权失败...
+      }
+    })
+  }
+})
+```
 
 
 
