--- a/source/_posts/微信小程序 - 获取图片页面上展示的宽高.md
+++ b/source/_posts/微信小程序 - 获取图片页面上展示的宽高.md
@@ -1,5 +1,5 @@
 ---
-title: 微信小程序获取图片页面上展示的宽高
+title: 微信小程序 - 获取图片页面上展示的宽高
 date: 2019-01-14 23:33:16
 author: huangkuiwei
 img: http://pic.ossfiles.cn:9186/group1/M00/15/1D/rBgIBlx579L_a7lKAAAf12qXaR0168.jpg
