--- a/source/_posts/微信小程序 - 重点总结.md
+++ b/source/_posts/微信小程序 - 重点总结.md
@@ -1,5 +1,5 @@
 ---
-title: 微信小程序重点总结
+title: 微信小程序 - 重点总结
 date: 2018-11-05 21:33:45
 author: huangkuiwei
 img: http://pic.ossfiles.cn:9186/group1/M00/15/1D/rBgIBlx579L_a7lKAAAf12qXaR0168.jpg
