--- a/source/_posts/微信小程序 - 重点总结.md
+++ b/source/_posts/微信小程序 - 重点总结.md
@@ -622,11 +622,19 @@ Page({
 >1. 写在 Page({}) 上面的代码一定会执行，即使当前页面并没有加载。
 >2. 加载顺序：先加载 app.js 中 App({}) 之前的代码，再加载 App 中的生命周期函数(`onLaunch(), onShow()`)，然后再加载其它页面 Page({}) 之前的代码，再加载当前要打开的页面的生命周期函数(`onLoad(). onShow(), onReady()`)。
 
+#### 28. scroll-view组件的一个bug？
+scroll-view 组件必须显示的设置一个高度，否则组件的事件：bindscroll、bindscrolltolower等无法生效.....
 
+#### 29. 组件的几个重要生命周期注意事项
+>1. 组件实例刚刚被创建好时， created 生命周期被触发。此时，组件数据 this.data 就是在 Component 构造器中定义的数据 data 。 `此时还不能调用 setData` 。 通常情况下，这个生命周期只应该用于给组件 this 添加一些自定义属性字段。
+>2. 在组件完全初始化完毕、进入页面节点树后， attached 生命周期被触发。此时， this.data 已被初始化为组件的当前值。这个生命周期很有用，绝大多数初始化工作可以在这个时机进行
+>3. 在组件离开页面节点树后， detached 生命周期被触发。退出一个页面时，如果组件还在页面节点树中，则 detached 会被触发。定义生命周期方法
 
+简而言之：
 
-
-
+>1. `created 组件实例化，但节点树还未导入，因此这时不能用setData`
+>2. `attached 节点树完成，可以用setData渲染节点，但无法操作节点`
+>3. `ready(不是onReady) 组件布局完成，这时可以获取节点信息，也可以操作节点`
 
 
 
