--- a/source/_posts/微信小程序 - 重点总结.md
+++ b/source/_posts/微信小程序 - 重点总结.md
@@ -636,6 +636,51 @@ scroll-view 组件必须显示的设置一个高度，否则组件的事件：bi
 >2. `attached 节点树完成，可以用setData渲染节点，但无法操作节点`
 >3. `ready(不是onReady) 组件布局完成，这时可以获取节点信息，也可以操作节点`
 
+#### 30. getCurrentPages() 一个妙用
+>作用：获取当前页面栈。数组中第一个元素为首页，最后一个元素为当前页面。
+
+在写有自定义组件的页面，自定义组件经常要与页面进行交互，比如自定义组件执行某个操作之后要调用页面的方法，此时可以用 `this.triggerEvent('my-event', args, options)`的方式触发事件，还有就是使用 `getCurrentPages()` 获取到当前页面的实例，然后直接调用相应的方法即可。
+```html
+<!-- 自定义组件.wxml -->
+<scroll-view scroll-y bindscrolltolower="scrolltolower"></scroll-view>
+```
+```javascript
+// 自定义组件.js 
+Component({
+  methods: {
+    scrolltolower() {
+      getCurrentPages().reverse()[0].scrolltolower(args)
+    }
+  }
+})
+```
+```javascript
+// 页面.js
+Page({
+  scrolltolower(args) {
+    // 操作
+  }
+})
+```
+
+#### 31. 小程序不支持通配符（*）选择器
+会引发编译错误。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
