--- a/source/_posts/微信小程序 - 重点总结.md
+++ b/source/_posts/微信小程序 - 重点总结.md
@@ -662,11 +662,80 @@ Page({
   }
 })
 ```
+#### 31. scroll-view标签对display: flex无效
+scroll-view标签对display: flex无效，所以在开发过程中，最好不要对 `scroll-view`元素使用 display: flex 属性。
+```html
+<scroll-view class="box" scroll-x>
+  <block wx:for="{{[1,2,3,4,5,6,7,8]}}" wx:key="{{index}}">
+    <view class="item">{{item}}</view>  
+  </block>
+</scroll-view>
+```
+```css
+page {
+  background: antiquewhite;
+}
+.box {
+  display: flex;
+  flex-direction: row;
+}
+.item {
+  height: 100rpx;
+  width: 100rpx;
+  background: #0ba360;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+```
+![效果图](/medias/postimages/19.png "效果图")
+看效果图就知道，flex-direction: row; 属性并没有起作用，按常理这些数字应该是横着排，那一个怎么解决这个问题呢？很简单，只要在 .item 外面再包一层元素就可以，比如 view：
+```html
+<scroll-view class="box" scroll-x>
+  <view class="content">
+    <block wx:for="{{[1,2,3,4,5,6,7,8]}}" wx:key="{{index}}">
+      <view class="item">{{item}}</view>  
+    </block>
+  </view>
+</scroll-view>
+```
+然后 display: flex 的属性就不给 scroll-view 组件了，一个给 .content，view 组件时正常的。
+```css
+page {
+  background: antiquewhite;
+}
+.content {
+  display: flex;
+  flex-direction: row;
+}
+.item {
+  height: 100rpx;
+  width: 100rpx;
+  background: #0ba360;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+```
+![效果图](/medias/postimages/20.png "效果图")
 
-#### 31. 小程序不支持通配符（*）选择器
+#### 32. 小程序不支持通配符（*）选择器
 会引发编译错误。
 
-
+#### 33. 小程序样式文件支持关键字 !important
+在写自定义组件时比较有用，将自定义组件加上属性：addGlobalClass: true
+```javascript
+Component({
+  options: {
+    // 等同于：styleIsolation: 'apply-shared'
+    // 表示页面 wxss 样式将影响到自定义组件，但自定义组件 wxss 中指定的样式不会影响页面
+    addGlobalClass: true
+  }
+})
+```
+此时，你可以在页面上写相应的样式来影响自定义组件，如果有冲突，可以用 !important 来提高优先级。
 
 
 
