--- a/source/_posts/微信小程序 - 重点总结.md
+++ b/source/_posts/微信小程序 - 重点总结.md
@@ -737,7 +737,36 @@ Component({
 ```
 此时，你可以在页面上写相应的样式来影响自定义组件，如果有冲突，可以用 !important 来提高优先级。
 
-
+#### 34. 外部样式类
+外部样式类是写自定义组件的时候经常用到的功能，它可以让你在不改变自定义组件的情况下去影响组件内部的样式。
+```javascript
+// 自定义组件 js
+Component({
+  // 这里的数组接收的是使用组件的页面的属性名，类似于 hover-class
+  externalClasses: ['custom-class', 'text-class']
+})
+```
+```html
+<!-- 自定义组件 my-com.wxml -->
+<!-- 将 custom-class、button-class 添加到相应的位置 -->
+<view class="custom-class">
+  <text class="text-class">文本内容...</text>
+</view>
+```
+```html
+<!-- 引用组件的页面 -->
+<my-com custom-class="my-com" text-class="text-class"></my-com>
+```
+```css
+/* 引用组件的页面的样式文件 */
+.my-com {
+  font-size: 100rpx;
+  color: #f00;
+}
+.text-class {
+  color: #ff0;
+}
+```
 
 
 
