--- a/source/_posts/微信小程序 - 重点总结.md
+++ b/source/_posts/微信小程序 - 重点总结.md
@@ -767,10 +767,76 @@ Component({
   color: #ff0;
 }
 ```
-
-
-
-
+#### 35. 自定义组件内部使用自定义组件
+腾讯的文档是真的出了奇的“简洁”，很多坑根本就没提过，需要开发者自己去踩，一个比一个雷，要不是腾讯现在是个垄断的大公司，掌握着绝大多数的用户，否则我相信小程序的开发者至少得跑一半。
+给自定义组件内部得自定义组件传入外部样式类，index 为页面，child-com 和child-child-com 是自定义组件，代码如下：
+```html
+<!-- index.wxml -->
+<child-com custom-class="box1"></child-com>
+```
+```html
+<!-- child-com.wxml -->
+<child-child-com custom-class="box2"></child-child-com>
+<view class="custom-class">child-com</view>
+```
+```html
+<!-- child-child-com.wxml -->
+<view class="custom-class">
+  <text>child-child-com1</text>
+</view>
+<view class="box3">child-child-com2</view>
+```
+在上面得自定义组件中都设有：
+```javascript
+Component({
+  externalClasses: ['custom-class'],
+  options: {
+    addGlobalClass: true
+  }
+})
+```
+组件内部得样式受到外部样式得影响，而且都有接收一个叫 `custom-class` 的样式类。
+这个时候，你要想在 index 页面或者 app.wxss 中设置自定义组件的样式，比如：
+```css
+.box1 {
+  color: #f00;
+}
+```
+实测之后没有什么问题。
+![效果图](/medias/postimages/21.png "效果图")
+接着修改 child-child-com.wxml 中，box3 的样式：
+```css
+.box3 {
+  color: #f00;
+}
+```
+实测之后没有什么问题。
+![效果图](/medias/postimages/22.png "效果图")
+接下来修改 box2 的样式：box2 是 child-child-com.wxml 的外部样式类。
+```css
+.box2 {
+  color: #f00;
+}
+```
+你会发现并没有产生效果，你只能使用这个 class 在 child-com.wxss 中进行修改。然后打开控制台发现一个有趣的问题：
+![效果图](/medias/postimages/23.png "效果图")
+这个 class 的名字竟然变成了 com-child-com--box2，这是为什么？文档里面根本就没有这些鬼东西好吧，好吧，我想了想，可能是怕开发者在写样式的时候无意影响到了这些内部的自定义组件，所以才给他加上这个前缀的吧...，真是良苦用心，但是你好歹也要说出来啊...
+所以我们如果还是执意要在外部页面影响这个组件的样式，就只能这样写了：
+```css
+.com-child-com--box2 {
+  color: #f00;
+}
+```
+![效果图](/medias/postimages/24.png "效果图")
+想到这里，我就想：child-child-com.wxml 文件里面一个 box3 的 class 也会有什么问题呢？从上面可以知道，通过外部页面 .box3 是可以修改这个样式的，那小程序会不会也会自动添加一个加有前缀的 class 名字呢？
+![效果图](/medias/postimages/25.png "效果图")
+没错，又出现了...所以这个时候也可以在外面页面写 .child-child-com--box3 来影响这个组件的样式：
+```css
+.child-child-com--box3 {
+  color: #f00;
+}
+```
+实测确实可以，不过我觉得没必要，而且我觉得腾讯也不鼓励开发者怎么做，至于我为什么会发现这个问题呢，因为我在用 vant-weapp 这个 UI 库开发的时候碰到这种组件里面套组件，就看了源代码发现了，这个时候我想在 app.wxss 中修改这个库中的某些样式，发现不能生效，结果一看，是样式名变了，在页面内影响不到，所以就只能看结构里面的 class 名，然后用这个名字去写样式。真的是曲折啊...
 
 
 
